feat: adjust and swagger
