# docs/swagger.json
@@ -313,306 +313,6 @@
                 }
             }
         },
-        "/emissor": {
-            "get": {
-                "description": "Retorna todos os emissores cadastrados",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "emissor"
-                ],
-                "summary": "Busca todos os emissores",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.Emissor"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "Cria um novo emissor com nome, email, senha, documento e tokenConfraPix",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "emissor"
-                ],
-                "summary": "Cria um novo emissor",
-                "parameters": [
-                    {
-                        "description": "Dados do emissor",
-                        "name": "emissor",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.EmissorReceive"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "ok",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Remove um emissor com base no EmissorID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "emissor"
-                ],
-                "summary": "Deleta emissor",
-                "parameters": [
-                    {
-                        "description": "EmissorID do emissor",
-                        "name": "emissor",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.EmissorDeleteRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/emissor/documento": {
-            "post": {
-                "description": "Retorna um emissor com base no Documento (enviado via body)",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "emissor"
-                ],
-                "summary": "Busca emissor por Documento",
-                "parameters": [
-                    {
-                        "description": "Documento do emissor",
-                        "name": "documento",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.EmissorDocumentoRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.Emissor"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/emissor/id/{id}": {
-            "get": {
-                "description": "Retorna um emissor com base no EmissorID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "emissor"
-                ],
-                "summary": "Busca emissor por ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "EmissorID do emissor",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.Emissor"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            },
-            "put": {
-                "description": "Atualiza dados de um emissor pelo EmissorID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "emissor"
-                ],
-                "summary": "Atualiza emissor",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "EmissorID do emissor",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Novos dados do emissor",
-                        "name": "emissor",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.EmissorReceive"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/expense-center": {
             "post": {
                 "description": "Cria um novo centro de custo",
@@ -2183,7 +1883,6 @@
                     "type": "string"
                 },
                 "clientID": {
-                    "description": "ver qual o motivo disso aqui, ta tentando simular o valor do mongo?",
                     "type": "string"
                 },
                 "cpf": {
@@ -2193,10 +1892,6 @@
                     "type": "string"
                 },
                 "email": {
-                    "type": "string"
-                },
-                "id": {
-                    "description": "ver qual o motivo disso aqui, ta tentando simular o valor do mongo?",
                     "type": "string"
                 },
                 "nome": {
@@ -2248,84 +1943,6 @@
                     "type": "string"
                 },
                 "nome": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.Emissor": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "documento": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "emissor_id": {
-                    "type": "string"
-                },
-                "nome": {
-                    "type": "string"
-                },
-                "senha": {
-                    "type": "string"
-                },
-                "token_confra_pix": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.EmissorDeleteRequest": {
-            "type": "object",
-            "required": [
-                "emissor_id"
-            ],
-            "properties": {
-                "emissor_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.EmissorDocumentoRequest": {
-            "type": "object",
-            "required": [
-                "documento"
-            ],
-            "properties": {
-                "documento": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.EmissorReceive": {
-            "type": "object",
-            "required": [
-                "documento",
-                "email",
-                "nome",
-                "senha",
-                "token_confra_pix"
-            ],
-            "properties": {
-                "documento": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "nome": {
-                    "type": "string"
-                },
-                "senha": {
-                    "type": "string"
-                },
-                "token_confra_pix": {
                     "type": "string"
                 }
             }
@@ -2600,13 +2217,13 @@
                 "email": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "string"
-                },
                 "name": {
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                },
+                "token_confra_pix": {
                     "type": "string"
                 },
                 "user_id": {
